# backscreen_260303

./: .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-windows-installer.yml
distribution/: INSTALL_GUIDE_KO.txt  RELEASE_WORKFLOW_KO.md
docs/architecture/: backend.md  frontend.md
docs/plans/: 2026-03-03-nondeveloper-dashboard-design.md  2026-03-03-nondeveloper-dashboard-implementation-part-1.md  2026-03-03-nondeveloper-dashboard-implementation-part-2.md  2026-03-03-nondeveloper-dashboard-implementation-part-3.md  2026-03-03-nondeveloper-dashboard-implementation.md  2026-03-03-nondeveloper-dashboard-qa-checklist.md  2026-03-03-production-ui-calendar-design.md  2026-03-03-uninstall-tray-ux-design.md  2026-03-03-uninstall-tray-ux-implementation.md  2026-03-03-wallpaper-safe-area-text-fit-design.md  2026-03-03-wallpaper-safe-area-text-fit-implementation.md  2026-03-04-display-scale-preview-drag-design.md  2026-03-04-display-scale-preview-drag-implementation.md  2026-03-04-overlay-todo-import-monitor-scale-design.md  (+6 more)
scripts/: make-release-bundle.sh
src/: App.tsx  currentClass.test.ts  currentClass.ts  defaults.ts  main.tsx  renderWallpaper.test.ts  renderWallpaper.ts  styles.css  types.ts
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  display_target.rs  error.rs  lib.rs  main.rs  models.rs  monitor.rs  persistence.rs  tray.rs  uninstall.rs  uninstall_state.rs  wallpaper.rs
(+68 files in other folders)
