[package]
name = "backscreen"
version = "0.1.0"
description = "Desktop wallpaper board for schools"
authors = ["BackScreen Team"]
edition = "2021"

[lib]
name = "backscreen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "backscreen"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
